project(TKBinL)

if (WIN32)
  list( APPEND TKBinL_PRECOMPILED_DEFS "-D__BinMDF_DLL" )
  list( APPEND TKBinL_PRECOMPILED_DEFS "-D__BinMDataStd_DLL" )
  list( APPEND TKBinL_PRECOMPILED_DEFS "-D__BinMFunction_DLL" )
  list( APPEND TKBinL_PRECOMPILED_DEFS "-D__BinMDocStd_DLL" )
  list( APPEND TKBinL_PRECOMPILED_DEFS "-D__BinObjMgt_DLL" )
  list( APPEND TKBinL_PRECOMPILED_DEFS "-D__BinLDrivers_DLL" )
  string( REGEX REPLACE ";" " " TKBinL_PRECOMPILED_DEFS "${TKBinL_PRECOMPILED_DEFS}")
endif()

  list( APPEND TKBinL_COMPILER_DIRECTORIES "${WOK_LIB_PATH}" )
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}/inc")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/inc" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/inc")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/inc" )
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BinMDF")
      list( APPEND TKBinL_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BinMDF" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BinMDF")
      list( APPEND TKBinL_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BinMDF" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BinMDataStd")
      list( APPEND TKBinL_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BinMDataStd" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BinMDataStd")
      list( APPEND TKBinL_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BinMDataStd" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BinMFunction")
      list( APPEND TKBinL_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BinMFunction" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BinMFunction")
      list( APPEND TKBinL_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BinMFunction" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BinMDocStd")
      list( APPEND TKBinL_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BinMDocStd" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BinMDocStd")
      list( APPEND TKBinL_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BinMDocStd" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BinObjMgt")
      list( APPEND TKBinL_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BinObjMgt" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BinObjMgt")
      list( APPEND TKBinL_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BinObjMgt" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BinLDrivers")
      list( APPEND TKBinL_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BinLDrivers" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BinLDrivers")
      list( APPEND TKBinL_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BinLDrivers" )
    ENDIF()

  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BinMDF")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BinMDF" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BinMDF")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BinMDF" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BinMDataStd")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BinMDataStd" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BinMDataStd")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BinMDataStd" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BinMFunction")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BinMFunction" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BinMFunction")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BinMFunction" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BinMDocStd")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BinMDocStd" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BinMDocStd")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BinMDocStd" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BinObjMgt")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BinObjMgt" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BinObjMgt")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BinObjMgt" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BinLDrivers")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BinLDrivers" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BinLDrivers")
    list( APPEND TKBinL_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BinLDrivers" )
  ENDIF()

IF (WIN32)
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ELSE()
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ENDIF()

  list( APPEND TKBinL_USED_LIBS TKCDF )
  list( APPEND TKBinL_USED_LIBS TKernel )
  list( APPEND TKBinL_USED_LIBS TKLCAF )

if (WIN32)
elseif(APPLE)
else()
endif()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_DataMapIteratorOfTypeADriverMap_0.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_DataMapIteratorOfTypeADriverMap_0.cxx" )
    SOURCE_GROUP (BinMDF FILES "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_DataMapIteratorOfTypeADriverMap_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_DataMapIteratorOfTypeADriverMap_0.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_DataMapIteratorOfTypeADriverMap_0.cxx" )
      SOURCE_GROUP (BinMDF FILES "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_DataMapIteratorOfTypeADriverMap_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_DataMapNodeOfTypeADriverMap_0.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_DataMapNodeOfTypeADriverMap_0.cxx" )
    SOURCE_GROUP (BinMDF FILES "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_DataMapNodeOfTypeADriverMap_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_DataMapNodeOfTypeADriverMap_0.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_DataMapNodeOfTypeADriverMap_0.cxx" )
      SOURCE_GROUP (BinMDF FILES "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_DataMapNodeOfTypeADriverMap_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_DoubleMapIteratorOfTypeIdMap_0.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_DoubleMapIteratorOfTypeIdMap_0.cxx" )
    SOURCE_GROUP (BinMDF FILES "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_DoubleMapIteratorOfTypeIdMap_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_DoubleMapIteratorOfTypeIdMap_0.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_DoubleMapIteratorOfTypeIdMap_0.cxx" )
      SOURCE_GROUP (BinMDF FILES "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_DoubleMapIteratorOfTypeIdMap_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_DoubleMapNodeOfTypeIdMap_0.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_DoubleMapNodeOfTypeIdMap_0.cxx" )
    SOURCE_GROUP (BinMDF FILES "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_DoubleMapNodeOfTypeIdMap_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_DoubleMapNodeOfTypeIdMap_0.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_DoubleMapNodeOfTypeIdMap_0.cxx" )
      SOURCE_GROUP (BinMDF FILES "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_DoubleMapNodeOfTypeIdMap_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_TypeADriverMap_0.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_TypeADriverMap_0.cxx" )
    SOURCE_GROUP (BinMDF FILES "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_TypeADriverMap_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_TypeADriverMap_0.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_TypeADriverMap_0.cxx" )
      SOURCE_GROUP (BinMDF FILES "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_TypeADriverMap_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_TypeIdMap_0.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_TypeIdMap_0.cxx" )
    SOURCE_GROUP (BinMDF FILES "${BUILD_PATCH_DIR}//drv/BinMDF/BinMDF_TypeIdMap_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_TypeIdMap_0.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_TypeIdMap_0.cxx" )
      SOURCE_GROUP (BinMDF FILES "${CMAKE_SOURCE_DIR}//drv/BinMDF/BinMDF_TypeIdMap_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF.cxx" )
    SOURCE_GROUP (BinMDF FILES "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF.cxx" )
      SOURCE_GROUP (BinMDF FILES "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF_ADriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF_ADriver.cxx" )
    SOURCE_GROUP (BinMDF FILES "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF_ADriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF_ADriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF_ADriver.cxx" )
      SOURCE_GROUP (BinMDF FILES "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF_ADriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF_ADriverTable.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF_ADriverTable.cxx" )
    SOURCE_GROUP (BinMDF FILES "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF_ADriverTable.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF_ADriverTable.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF_ADriverTable.cxx" )
      SOURCE_GROUP (BinMDF FILES "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF_ADriverTable.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF_ReferenceDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF_ReferenceDriver.cxx" )
    SOURCE_GROUP (BinMDF FILES "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF_ReferenceDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF_ReferenceDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF_ReferenceDriver.cxx" )
      SOURCE_GROUP (BinMDF FILES "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF_ReferenceDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF_TagSourceDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF_TagSourceDriver.cxx" )
    SOURCE_GROUP (BinMDF FILES "${BUILD_PATCH_DIR}//src/BinMDF/BinMDF_TagSourceDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF_TagSourceDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF_TagSourceDriver.cxx" )
      SOURCE_GROUP (BinMDF FILES "${CMAKE_SOURCE_DIR}//src/BinMDF/BinMDF_TagSourceDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_AsciiStringDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_AsciiStringDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_AsciiStringDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_AsciiStringDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_AsciiStringDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_AsciiStringDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_BooleanArrayDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_BooleanArrayDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_BooleanArrayDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_BooleanArrayDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_BooleanArrayDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_BooleanArrayDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_BooleanListDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_BooleanListDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_BooleanListDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_BooleanListDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_BooleanListDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_BooleanListDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ByteArrayDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ByteArrayDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ByteArrayDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ByteArrayDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ByteArrayDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ByteArrayDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_CommentDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_CommentDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_CommentDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_CommentDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_CommentDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_CommentDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_DirectoryDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_DirectoryDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_DirectoryDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_DirectoryDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_DirectoryDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_DirectoryDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ExpressionDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ExpressionDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ExpressionDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ExpressionDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ExpressionDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ExpressionDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ExtStringArrayDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ExtStringArrayDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ExtStringArrayDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ExtStringArrayDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ExtStringArrayDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ExtStringArrayDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ExtStringListDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ExtStringListDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ExtStringListDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ExtStringListDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ExtStringListDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ExtStringListDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_IntPackedMapDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_IntPackedMapDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_IntPackedMapDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_IntPackedMapDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_IntPackedMapDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_IntPackedMapDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_IntegerArrayDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_IntegerArrayDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_IntegerArrayDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_IntegerArrayDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_IntegerArrayDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_IntegerArrayDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_IntegerDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_IntegerDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_IntegerDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_IntegerDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_IntegerDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_IntegerDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_IntegerListDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_IntegerListDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_IntegerListDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_IntegerListDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_IntegerListDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_IntegerListDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_NameDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_NameDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_NameDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_NameDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_NameDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_NameDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_NamedDataDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_NamedDataDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_NamedDataDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_NamedDataDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_NamedDataDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_NamedDataDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_NoteBookDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_NoteBookDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_NoteBookDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_NoteBookDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_NoteBookDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_NoteBookDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_RealArrayDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_RealArrayDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_RealArrayDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_RealArrayDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_RealArrayDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_RealArrayDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_RealDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_RealDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_RealDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_RealDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_RealDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_RealDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_RealListDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_RealListDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_RealListDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_RealListDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_RealListDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_RealListDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ReferenceArrayDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ReferenceArrayDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ReferenceArrayDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ReferenceArrayDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ReferenceArrayDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ReferenceArrayDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ReferenceListDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ReferenceListDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_ReferenceListDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ReferenceListDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ReferenceListDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_ReferenceListDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_RelationDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_RelationDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_RelationDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_RelationDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_RelationDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_RelationDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_TickDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_TickDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_TickDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_TickDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_TickDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_TickDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_TreeNodeDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_TreeNodeDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_TreeNodeDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_TreeNodeDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_TreeNodeDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_TreeNodeDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_UAttributeDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_UAttributeDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_UAttributeDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_UAttributeDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_UAttributeDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_UAttributeDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_VariableDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_VariableDriver.cxx" )
    SOURCE_GROUP (BinMDataStd FILES "${BUILD_PATCH_DIR}//src/BinMDataStd/BinMDataStd_VariableDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_VariableDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_VariableDriver.cxx" )
      SOURCE_GROUP (BinMDataStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataStd/BinMDataStd_VariableDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMFunction/BinMFunction.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMFunction/BinMFunction.cxx" )
    SOURCE_GROUP (BinMFunction FILES "${BUILD_PATCH_DIR}//src/BinMFunction/BinMFunction.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMFunction/BinMFunction.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMFunction/BinMFunction.cxx" )
      SOURCE_GROUP (BinMFunction FILES "${CMAKE_SOURCE_DIR}//src/BinMFunction/BinMFunction.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMFunction/BinMFunction_FunctionDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMFunction/BinMFunction_FunctionDriver.cxx" )
    SOURCE_GROUP (BinMFunction FILES "${BUILD_PATCH_DIR}//src/BinMFunction/BinMFunction_FunctionDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMFunction/BinMFunction_FunctionDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMFunction/BinMFunction_FunctionDriver.cxx" )
      SOURCE_GROUP (BinMFunction FILES "${CMAKE_SOURCE_DIR}//src/BinMFunction/BinMFunction_FunctionDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMFunction/BinMFunction_GraphNodeDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMFunction/BinMFunction_GraphNodeDriver.cxx" )
    SOURCE_GROUP (BinMFunction FILES "${BUILD_PATCH_DIR}//src/BinMFunction/BinMFunction_GraphNodeDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMFunction/BinMFunction_GraphNodeDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMFunction/BinMFunction_GraphNodeDriver.cxx" )
      SOURCE_GROUP (BinMFunction FILES "${CMAKE_SOURCE_DIR}//src/BinMFunction/BinMFunction_GraphNodeDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMFunction/BinMFunction_ScopeDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMFunction/BinMFunction_ScopeDriver.cxx" )
    SOURCE_GROUP (BinMFunction FILES "${BUILD_PATCH_DIR}//src/BinMFunction/BinMFunction_ScopeDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMFunction/BinMFunction_ScopeDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMFunction/BinMFunction_ScopeDriver.cxx" )
      SOURCE_GROUP (BinMFunction FILES "${CMAKE_SOURCE_DIR}//src/BinMFunction/BinMFunction_ScopeDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDocStd/BinMDocStd.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDocStd/BinMDocStd.cxx" )
    SOURCE_GROUP (BinMDocStd FILES "${BUILD_PATCH_DIR}//src/BinMDocStd/BinMDocStd.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDocStd/BinMDocStd.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDocStd/BinMDocStd.cxx" )
      SOURCE_GROUP (BinMDocStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDocStd/BinMDocStd.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDocStd/BinMDocStd_XLinkDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDocStd/BinMDocStd_XLinkDriver.cxx" )
    SOURCE_GROUP (BinMDocStd FILES "${BUILD_PATCH_DIR}//src/BinMDocStd/BinMDocStd_XLinkDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDocStd/BinMDocStd_XLinkDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDocStd/BinMDocStd_XLinkDriver.cxx" )
      SOURCE_GROUP (BinMDocStd FILES "${CMAKE_SOURCE_DIR}//src/BinMDocStd/BinMDocStd_XLinkDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinObjMgt/BinObjMgt_Persistent.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinObjMgt/BinObjMgt_Persistent.cxx" )
    SOURCE_GROUP (BinObjMgt FILES "${BUILD_PATCH_DIR}//src/BinObjMgt/BinObjMgt_Persistent.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinObjMgt/BinObjMgt_Persistent.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinObjMgt/BinObjMgt_Persistent.cxx" )
      SOURCE_GROUP (BinObjMgt FILES "${CMAKE_SOURCE_DIR}//src/BinObjMgt/BinObjMgt_Persistent.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinLDrivers/BinLDrivers.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinLDrivers/BinLDrivers.cxx" )
    SOURCE_GROUP (BinLDrivers FILES "${BUILD_PATCH_DIR}//src/BinLDrivers/BinLDrivers.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinLDrivers/BinLDrivers.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinLDrivers/BinLDrivers.cxx" )
      SOURCE_GROUP (BinLDrivers FILES "${CMAKE_SOURCE_DIR}//src/BinLDrivers/BinLDrivers.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinLDrivers/BinLDrivers_DocumentRetrievalDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinLDrivers/BinLDrivers_DocumentRetrievalDriver.cxx" )
    SOURCE_GROUP (BinLDrivers FILES "${BUILD_PATCH_DIR}//src/BinLDrivers/BinLDrivers_DocumentRetrievalDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinLDrivers/BinLDrivers_DocumentRetrievalDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinLDrivers/BinLDrivers_DocumentRetrievalDriver.cxx" )
      SOURCE_GROUP (BinLDrivers FILES "${CMAKE_SOURCE_DIR}//src/BinLDrivers/BinLDrivers_DocumentRetrievalDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinLDrivers/BinLDrivers_DocumentSection.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinLDrivers/BinLDrivers_DocumentSection.cxx" )
    SOURCE_GROUP (BinLDrivers FILES "${BUILD_PATCH_DIR}//src/BinLDrivers/BinLDrivers_DocumentSection.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinLDrivers/BinLDrivers_DocumentSection.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinLDrivers/BinLDrivers_DocumentSection.cxx" )
      SOURCE_GROUP (BinLDrivers FILES "${CMAKE_SOURCE_DIR}//src/BinLDrivers/BinLDrivers_DocumentSection.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinLDrivers/BinLDrivers_DocumentStorageDriver.cxx")
    list( APPEND TKBinL_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinLDrivers/BinLDrivers_DocumentStorageDriver.cxx" )
    SOURCE_GROUP (BinLDrivers FILES "${BUILD_PATCH_DIR}//src/BinLDrivers/BinLDrivers_DocumentStorageDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinLDrivers/BinLDrivers_DocumentStorageDriver.cxx")
      list( APPEND TKBinL_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinLDrivers/BinLDrivers_DocumentStorageDriver.cxx" )
      SOURCE_GROUP (BinLDrivers FILES "${CMAKE_SOURCE_DIR}//src/BinLDrivers/BinLDrivers_DocumentStorageDriver.cxx")
    ENDIF()
  ENDIF()


IF (WIN32)
ELSE()

  IF (APPLE)

  ENDIF()

ENDIF()

if ("${USED_TOOLKITS}" STREQUAL "" OR DEFINED TurnONtheTKBinL)
 add_library( TKBinL SHARED ${TKBinL_USED_SRCFILES} )

 set_property(TARGET TKBinL PROPERTY FOLDER ApplicationFramework)

 install( TARGETS TKBinL
                                 RUNTIME DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_SUFFIX}"
                                 ARCHIVE DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_SUFFIX}"
                                 LIBRARY DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_SUFFIX}")

 if (MSVC)
  install( FILES  ${CMAKE_BINARY_DIR}/out/bin/Debug/TKBinL.pdb CONFIGURATIONS Debug
                                  DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_SUFFIX}")
 endif()


 set_target_properties( TKBinL PROPERTIES COMPILE_FLAGS "${TKBinL_PRECOMPILED_DEFS}" )
 include_directories( ${TKBinL_COMPILER_DIRECTORIES} )
 target_link_libraries( TKBinL ${TKBinL_USED_LIBS} )
endif()
